# EagleBank.Api/DTOs/Auth/AuthResponse.cs
@@ -1,0 +1,6 @@
+namespace EagleBank.Api.DTOs.Auth;
+
+public class AuthResponse
+{
+    public string Token { get; set; } = string.Empty;
+}
